refactor : get에서 getFirst로 변경